logs/quart.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Quart-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/aiofiles'...
Listing './lib/python3.5/site-packages/aiofiles/threadpool'...
Listing './lib/python3.5/site-packages/aiofiles-0.3.2.dist-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/h11'...
Listing './lib/python3.5/site-packages/h11/tests'...
Listing './lib/python3.5/site-packages/h11/tests/data'...
Listing './lib/python3.5/site-packages/h11-0.7.0.dist-info'...
Listing './lib/python3.5/site-packages/h2'...
Listing './lib/python3.5/site-packages/h2-3.0.1.dist-info'...
Listing './lib/python3.5/site-packages/hpack'...
Listing './lib/python3.5/site-packages/hpack-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/hyperframe'...
Listing './lib/python3.5/site-packages/hyperframe-5.1.0.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quart'...
Compiling './lib/python3.5/site-packages/quart/app.py'...
***   File "./lib/python3.5/site-packages/quart/app.py", line 130
    self.after_request_funcs: Dict[AppOrBlueprintKey, List[Callable]] = defaultdict(list)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/blueprints.py'...
***   File "./lib/python3.5/site-packages/quart/blueprints.py", line 33
    json_decoder: Optional[JSONDecoder] = None
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/config.py'...
***   File "./lib/python3.5/site-packages/quart/config.py", line 94
    f"Environment variable {variable_name} is not present, cannot load config",
                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/ctx.py'...
***   File "./lib/python3.5/site-packages/quart/ctx.py", line 35
    self.session: Optional[Session] = None
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/datastructures.py'...
***   File "./lib/python3.5/site-packages/quart/datastructures.py", line 98
    return f"<{self.__class__.__name__}: {self.filename} ({self.content_type}))>"
                                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/exceptions.py'...
***   File "./lib/python3.5/site-packages/quart/exceptions.py", line 27
    return f"""
<!doctype html>
<title>{self.status_code} {self.name}</title>
<h1>{self.name}</h1>
{self.description}
        """
               
               
                                             
                    
                  
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/quart/flask_patch'...
Compiling './lib/python3.5/site-packages/quart/helpers.py'...
***   File "./lib/python3.5/site-packages/quart/helpers.py", line 105
    **values: Any,
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/logging.py'...
***   File "./lib/python3.5/site-packages/quart/logging.py", line 57
    'r': f"{request.method} {request.path} {protocol}",
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/routing.py'...
***   File "./lib/python3.5/site-packages/quart/routing.py", line 73
    self.regex = f"[^/]{re_length}"
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/serving.py'...
***   File "./lib/python3.5/site-packages/quart/serving.py", line 30
    self.task: Optional[asyncio.Future] = None
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/static.py'...
***   File "./lib/python3.5/site-packages/quart/static.py", line 32
    self._static_folder: Optional[str] = None
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/testing.py'...
***   File "./lib/python3.5/site-packages/quart/testing.py", line 42
    ) -> Response:
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/utils.py'...
***   File "./lib/python3.5/site-packages/quart/utils.py", line 17
    body = f"""
<!doctype html>
<title>Redirect</title>
<h1>Redirect</h1>
You should be redirected to <a href="{location}">{location}</a>, it not please click the link
    """
               
               
                       
                 
                                                                                             
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/views.py'...
***   File "./lib/python3.5/site-packages/quart/views.py", line 40
    decorators: List[Callable] = []
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/worker.py'...
***   File "./lib/python3.5/site-packages/quart/worker.py", line 16
    self.loop: Optional[asyncio.AbstractEventLoop] = None
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quart/wrappers.py'...
***   File "./lib/python3.5/site-packages/quart/wrappers.py", line 107
    self.headers: CIMultiDict
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sortedcontainers'...
Listing './lib/python3.5/site-packages/sortedcontainers-1.5.9.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
